deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: active-mq
  labels:
    app: active-mq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: active-mq
  template:
    metadata:
      labels:
        app: active-mq
    spec:
      containers:
        - image: csturion/apache-mq
          name: active-mq
          ports:
          - containerPort: 8161
            name: web
            protocol: TCP
          - containerPort: 9876
            name: broadcast
            protocol: UDP
          - containerPort: 61610
            name: netty-connector
            protocol: TCP
          - containerPort: 61613
            name: stomp
            protocol: TCP
          - containerPort: 1883
            name: mqtt
            protocol: TCP
          - containerPort: 61616
            name: openwire
            protocol: TCP
          - containerPort: 9404
            name: jmx
            protocol: TCP
          - containerPort: 5445
            name: hornetq
            protocol: TCP
          - containerPort: 5672
            name: amqp
            protocol: TCP
          imagePullPolicy: Always
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 1000Mi
              cpu: 400m
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW  
          volumeMounts:
          - name: active-creds
            mountPath: /home/alpine/apache-artemis-2.16.0/conf/jetty-realm.properties
            subPath: jetty-realm.properties
      volumes:
      - name: active-creds
        secret:
          secretName: creds
      restartPolicy: Always
