service.yaml
apiVersion: v1
kind: Service
metadata:
  name: active-mq
  namespace: active-mq
  labels:
    app: active-mq
spec:
  selector:
    app: active-mq
  ports:
  - name: dashboard
    port: 8161
    targetPort: 8161
    protocol: TCP
  - name: broadcast
    port: 9876
    targetPort: 9876
    protocol: TCP
  - name: openwire
    port: 61616
    targetPort: 61616
    protocol: TCP
  - name: netty-connector
    port: 61610
    targetPort: 61610
    protocol: TCP
  - name: amqp
    port: 5672
    targetPort: 5672
    protocol: TCP
  - name: stomp
    port: 61613
    targetPort: 61613
    protocol: TCP
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
  - name: jmx
    port: 9404
    protocol: TCP
    targetPort: 9404
  - name: hornetq
    port: 5445
    protocol: TCP
    targetPort: 5445
  type: LoadBalancer
