hello-k8s-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    # use nginx-ingress (needed if 2+ ingress controllers)
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # route by virtualhost - externaldns registers this record
  - host: a339291cd1de14064a5144a840b48e21-97671f3b118eb4f8.elb.us-east-1.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes
          # connect to service using http port
          servicePort: 80
        # default path put here explicitly for illustrative purposes
        path: /
