ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingresse-test
  namespace: active-mq
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.veloe.com
    http:
      paths:
      - backend:
          serviceName: active-mq
          servicePort: 8161
        path: /
